--- a/index.html
+++ b/index.html
@@ -27,26 +27,31 @@
 
     </header>
     <section id="hero">
-        <div id="hero-intro">
-            <div class="headline-Hero">
-                <h1>EMPOWER YOUR BUSINESS WITH STUNNIG DESIGN!</h1>
-            </div>
-            <div class="text-Content">
-                Circle is a digital design and development studio. We design and develop astonishing websites and
-                mobiles apps.
-            </div>
-            <div>
+        <div id="hero-flexcontainer">
+            <div id="hero-intro-flexitem">
+                 <h1>Empower Your Busines With Stunning Design!</h1>
+                
+                <div class="text-Content">
+                    <p>Circle is a digital design and development studio.<br>
+                        We design and develop astonishing websites <br>
+                        and mobiles apps.</p>
+                </div>
+            
+                <div>
                 <a href="#" class="std-button">Get in touch</a>
                 <a href="#" class="hero-btns1">See ou work</a>
-           </div>
+                 </div>
+            </div>
         </div>
 
-        <div id="hero-img">
-            <img src="imagenes/hero-image.png" alt="hero" class="heroimg">
-            <img src="imagenes/card-1.png" alt="mastercard" class="card-1">
-            <img src="imagenes/card-2.png" alt="visacard" class="card-2">
+        <div id="hero-img-flexitem">
+            <!--<img src="imagenes/hero-image.png" alt="hero" class="heroimg">-->
+            <!-- <img src="imagenes/card-1.png" alt="mastercard" class="card-1"> -->
+            <!-- <img src="imagenes/card-2.png" alt="visacard" class="card-2"> -->
 
         </div>
+        </div>
+        <hr>
 
     </section>
     <section id="clients">
