Fin de proyecto

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
             <img src="./imagenes/circle.svg" alt="circle logo" class="logo">
 
             <div>
-                <a href="#" class="navMenu">Home</a>
+                <a href="index.html" class="navMenu">Home</a>
                 <a href="#" class="navMenu">Project</a>
                 <a href="#" class="navMenu">Services</a>
 
