--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
+    
     <script defer src="./index.js"></script>
     <title>home</title>
 </head>
@@ -17,12 +18,12 @@
 
             <div>
                 <a href="./contact.html" class="navMenu">Home</a>
-                <a href="project.html/?" class="navMenu">Project</a>
-                <a href="#" class="navMenu">Services</a>
+                <a href="#" class="navMenu">Project</a>
+                <a href="#services" class="navMenu">Services</a>
 
             </div>
             <span>
-                <a href="./contact.html" class="" class="std-button">Contact us</a>
+                <a href="./contact.html"  class="std-button">Contact us</a>
             </span>
         </nav>
 
@@ -41,7 +42,7 @@
 
                 <div>
                     <a href="#" class="hero-btns1">See our work</a>
-                    <a href="#" class="std-button">Get in touch</a>
+                    <a href="./contact.html" class="std-button">Get in touch</a>
 
                 </div>
             </div>
@@ -103,7 +104,7 @@
         </div>
     </section>
     <section>
-        <div class="our-services_container">
+        <div class="our-services_container" id="services">
             <h1>Our Services</h1>
             <div class="services_grid">
                 <div class="services_flex">
@@ -164,10 +165,10 @@
         </div>
         <div class="menu-footer">
             <a href="#" class="navMenuFooter">Team</a>
-            <a href="#" class="navMenuFooter">Services</a>
+            <a href="#services" class="navMenuFooter">Services</a>
             <a href="#" class="navMenuFooter">About Us</a>
             <a href="#" class="navMenuFooter">Press</a>
-            <a href="#" class="navMenuFooter">Projects</a>
+            <a href="project.html/?"class="navMenuFooter">Projects</a>
             <a href="#" class="navMenuFooter">Privacy Policy</a>
         </div>
     </footer>
