--- a/project.html
+++ b/project.html
@@ -16,13 +16,13 @@
             <img src="./imagenes/circle.svg" alt="circle logo" class="logo">
 
             <div>
-                <a href="#" class="navMenu">Home</a>
+                <a href="index.html" class="navMenu">Home</a>
                 <a href="#" class="navMenu">Project</a>
                 <a href="#" class="navMenu">Services</a>
 
             </div>
             <span>
-                <a href="#" class="std-button">Contact us</a>
+                <a href="contact.html" class="std-button">Contact us</a>
             </span>
         </nav>
 
